Add helper classes to HTML preview

--- a/templates/html.hbs
+++ b/templates/html.hbs
@@ -31,6 +31,11 @@
         <div class="panel panel-primary">
           <div class="panel-heading">{{fontName}}</div>
           <div class="panel-body">
+            <label>
+              <i class="dcs-icon dcs-icon-edit"></i> CSS Control
+            </label>
+            <p>Easily style icon color, size, shadow, and anything that's possible with CSS.</p>
+            <br>
             <div class="row">
               <form class="form-inline">
                 {{#each names}}
@@ -54,15 +59,32 @@
     <div class="row">
       <div class="col-sm-12">
         <div class="panel panel-info">
-          <div class="panel-heading">Helper classes</div>
+          <div class="panel-heading">Sizing classes</div>
           <div class="panel-body">
+            <p>
+              DCS Icon Font provides some classes for different icon sizes.
+              For that, you only need to apply the following classes in your icons.
+            </p>
             <div class="container-fluid">
               <div class="row">
                 <div class="col-sm-4 col-md-3">
-                  coisas
+                  <ul>
+                    <li><code>.dcs-icon-sm</code></li>
+                    <li><code>.dcs-icon-1-5x</code></li>
+                    <li><code>.dcs-icon-2x</code></li>
+                    <li><code>.dcs-icon-3x</code></li>
+                    <li><code>.dcs-icon-4x</code></li>
+                  </ul>
                 </div>
                 <div class="col-sm-4 col-md-3">
-                  coisas
+                  <p>Examples:</p>
+                  <ul>
+                    <li><i class="dcs-icon dcs-icon-delete dcs-icon-sm"></i></li>
+                    <li><i class="dcs-icon dcs-icon-delete dcs-icon-1-5x"></i></li>
+                    <li><i class="dcs-icon dcs-icon-delete dcs-icon-2x"></i></li>
+                    <li><i class="dcs-icon dcs-icon-delete dcs-icon-3x"></i></li>
+                    <li><i class="dcs-icon dcs-icon-delete dcs-icon-4x"></i></li>
+                  </ul>
                 </div>
               </div>
             </div>
