--- a/templates/html.hbs
+++ b/templates/html.hbs
@@ -21,6 +21,19 @@
       vertical-align: middle;
     }
 
+    ul, ul li {
+      padding: 5px;
+      margin: 0px;
+    }
+
+    ul li {
+      list-style: none;
+    }
+
+    .icon-wrapper {
+      text-align: center;
+    }
+
 		{{{styles}}}
 	</style>
 </head>
@@ -67,23 +80,59 @@
             </p>
             <div class="container-fluid">
               <div class="row">
-                <div class="col-sm-4 col-md-3">
-                  <ul>
-                    <li><code>.dcs-icon-sm</code></li>
-                    <li><code>.dcs-icon-1-5x</code></li>
-                    <li><code>.dcs-icon-2x</code></li>
-                    <li><code>.dcs-icon-3x</code></li>
-                    <li><code>.dcs-icon-4x</code></li>
-                  </ul>
-                </div>
-                <div class="col-sm-4 col-md-3">
+                <div class="col-xs-12">
                   <p>Examples:</p>
                   <ul>
-                    <li><i class="dcs-icon dcs-icon-delete dcs-icon-sm"></i></li>
-                    <li><i class="dcs-icon dcs-icon-delete dcs-icon-1-5x"></i></li>
-                    <li><i class="dcs-icon dcs-icon-delete dcs-icon-2x"></i></li>
-                    <li><i class="dcs-icon dcs-icon-delete dcs-icon-3x"></i></li>
-                    <li><i class="dcs-icon dcs-icon-delete dcs-icon-4x"></i></li>
+                    <li>
+                      <div class="table">
+                        <div class="cell icon-wrapper" style="width: 80px;">
+                          <i class="dcs-icon dcs-icon-delete dcs-icon-sm"></i>
+                        </div>
+                        <div class="cell">
+                          <code>.dcs-icon-sm</code>
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="table">
+                        <div class="cell icon-wrapper" style="width: 80px;">
+                          <i class="dcs-icon dcs-icon-delete dcs-icon-1-5x"></i>
+                        </div>
+                        <div class="cell">
+                          <code>.dcs-icon-1-5x</code>
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="table">
+                        <div class="cell icon-wrapper" style="width: 80px;">
+                          <i class="dcs-icon dcs-icon-delete dcs-icon-2x"></i>
+                        </div>
+                        <div class="cell">
+                          <code>.dcs-icon-2x</code>
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="table">
+                        <div class="cell icon-wrapper" style="width: 80px;">
+                          <i class="dcs-icon dcs-icon-delete dcs-icon-3x"></i>
+                        </div>
+                        <div class="cell">
+                          <code>.dcs-icon-3x</code>
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="table">
+                        <div class="cell icon-wrapper" style="width: 80px;">
+                          <i class="dcs-icon dcs-icon-delete dcs-icon-4x"></i>
+                        </div>
+                        <div class="cell">
+                          <code>.dcs-icon-4x</code>
+                        </div>
+                      </div>
+                    </li>
                   </ul>
                 </div>
               </div>
