Add CSS template
In order to introduce the sizing classes

--- a/templates/css.hbs
+++ b/templates/css.hbs
@@ -20,3 +20,19 @@
 	content: "\\{{this}}";
 }
 {{/each}}
+
+.{{baseClass}}.{{classPrefix}}sm {
+  font-size: 1em;
+}
+.{{baseClass}}.{{classPrefix}}1-5x {
+  font-size: 1.5em;
+}
+.{{baseClass}}.{{classPrefix}}2x {
+  font-size: 2em;
+}
+.{{baseClass}}.{{classPrefix}}3x {
+  font-size: 3em;
+}
+.{{baseClass}}.{{classPrefix}}4x {
+  font-size: 4em;
+}
