Upgrade webfonts-generator dependency version from 0.3.5 to 0.4.0
Support new "baseSelector" parameter and deprecate "baseClass"

--- a/spec/templates/css.hbs
+++ b/spec/templates/css.hbs
@@ -5,12 +5,12 @@
 
 // CSS generated from the UNIT TESTS template
 
-.{{baseClass}} {
+.{{baseSelector}} {
 	line-height: normal;
 	font-size: 2em;
 }
 
-.{{baseClass}}:before {
+.{{baseSelector}}:before {
 	font-family: {{fontName}} !important;
 	font-style: normal;
 	font-weight: normal !important;
@@ -23,18 +23,18 @@
 }
 {{/each}}
 
-.{{baseClass}}.{{classPrefix}}sm {
+.{{baseSelector}}.{{classPrefix}}sm {
   font-size: 1em;
 }
-.{{baseClass}}.{{classPrefix}}1-5x {
+.{{baseSelector}}.{{classPrefix}}1-5x {
   font-size: 1.5em;
 }
-.{{baseClass}}.{{classPrefix}}2x {
+.{{baseSelector}}.{{classPrefix}}2x {
   font-size: 2em;
 }
-.{{baseClass}}.{{classPrefix}}3x {
+.{{baseSelector}}.{{classPrefix}}3x {
   font-size: 3em;
 }
-.{{baseClass}}.{{classPrefix}}4x {
+.{{baseSelector}}.{{classPrefix}}4x {
   font-size: 4em;
 }
