--- a/spec/templates/html.hbs
+++ b/spec/templates/html.hbs
@@ -60,7 +60,7 @@
           <div class="panel-body">
             <label>
               {{#with names.[0]}}
-                <i class="{{../baseClass}} {{../classPrefix}}{{ this }}"></i> CSS Control
+                <i class="{{../baseSelector}} {{../classPrefix}}{{ this }}"></i> CSS Control
               {{/with}}
             </label>
             <p>Easily style icon color, size, shadow, and anything that's possible with CSS.</p>
@@ -70,7 +70,7 @@
               <div class="col-xs-12 col-sm-4 col-md-3 icon-preview-wrapper">
                 <div class="table">
                   <div class="cell" style="width: 80px;">
-                    <i class="{{../baseClass}} {{../classPrefix}}{{this}}"></i>
+                    <i class="{{../baseSelector}} {{../classPrefix}}{{this}}"></i>
                   </div>
                   <div class="cell">
                     <code>{{this}}</code>
@@ -101,7 +101,7 @@
                         <li>
                           <div class="table">
                             <div class="cell icon-wrapper" style="width: 80px;">
-                              <i class="{{ ../baseClass }} {{ ../classPrefix }}{{ this }} {{ ../classPrefix }}sm"></i>
+                              <i class="{{ ../baseSelector }} {{ ../classPrefix }}{{ this }} {{ ../classPrefix }}sm"></i>
                             </div>
                             <div class="cell">
                               <code>{{ ../classPrefix }}sm</code>
@@ -111,7 +111,7 @@
                         <li>
                           <div class="table">
                             <div class="cell icon-wrapper" style="width: 80px;">
-                              <i class="{{ ../baseClass }} {{ ../classPrefix }}{{ this }} {{ ../classPrefix }}1-5x"></i>
+                              <i class="{{ ../baseSelector }} {{ ../classPrefix }}{{ this }} {{ ../classPrefix }}1-5x"></i>
                             </div>
                             <div class="cell">
                               <code>.{{ ../classPrefix }}1-5x</code>
@@ -121,7 +121,7 @@
                         <li>
                           <div class="table">
                             <div class="cell icon-wrapper" style="width: 80px;">
-                              <i class="{{ ../baseClass }} {{ ../classPrefix }}{{ this }} {{ ../classPrefix }}2x"></i>
+                              <i class="{{ ../baseSelector }} {{ ../classPrefix }}{{ this }} {{ ../classPrefix }}2x"></i>
                             </div>
                             <div class="cell">
                               <code>.{{ ../classPrefix }}2x</code>
@@ -131,7 +131,7 @@
                         <li>
                           <div class="table">
                             <div class="cell icon-wrapper" style="width: 80px;">
-                              <i class="{{ ../baseClass }} {{ ../classPrefix }}{{ this }} {{ ../classPrefix }}3x"></i>
+                              <i class="{{ ../baseSelector }} {{ ../classPrefix }}{{ this }} {{ ../classPrefix }}3x"></i>
                             </div>
                             <div class="cell">
                               <code>.{{ ../classPrefix }}3x</code>
@@ -141,7 +141,7 @@
                         <li>
                           <div class="table">
                             <div class="cell icon-wrapper" style="width: 80px;">
-                              <i class="{{ ../baseClass }} {{ ../classPrefix }}{{ this }} {{ ../classPrefix }}4x"></i>
+                              <i class="{{ ../baseSelector }} {{ ../classPrefix }}{{ this }} {{ ../classPrefix }}4x"></i>
                             </div>
                             <div class="cell">
                               <code>.{{ ../classPrefix }}4x</code>
@@ -166,7 +166,7 @@
 
         if ($(this).val().length) {
           var reg = new RegExp('w*' + $(this).val() + 'w*');
-          $('.{{ baseClass }}')
+          $('.{{ baseSelector }}')
             .filter(function() {
               if (!this.classList.value.match(reg)) {
                 $(this).closest('.icon-preview-wrapper').hide();
