--- a/templates/scss.hbs
+++ b/templates/scss.hbs
@@ -6,7 +6,7 @@ $font-height: 1em;
 	src: {{{src}}};
 }
 
-.{{baseClass}} {
+.{{baseSelector}} {
 	line-height: $line-height;
 	font-size: $font-height;
 
@@ -26,7 +26,7 @@ $font-height: 1em;
   );
 
   @each $key, $size in $icon-sizes {
-    &.{{baseClass}}-#{$key} {
+    &.{{baseSelector}}-#{$key} {
       font-size: $size;
     }
   }
